fixed footer gap

--- a/styles.css
+++ b/styles.css
@@ -196,10 +196,11 @@ footer li {
 }
 #footerRow a {
   text-transform: uppercase;
+  margin: 0 0.5em;
 }
 #footerRow {
-  display: grid;
-  grid-template-columns: 1fr 1.5fr 1.5fr 1.5fr 1fr;
+  display: flex;
+  justify-content: center;
 }
 #footerRow a:nth-of-type(1) {
   display: grid;
